rework de http req, funcionalidades basicas en main, agregado entity list y funciones en named entity